# odoo-dev

./: .gitignore  .gitmodules  CHANGELOG.md  README.md  pyproject.toml  release-please-config.json
.claude/: settings.json
.github/workflows/: release-please.yml
src/odoo_dev/: __init__.py  cli.py  config.py  preflight.py
src/odoo_dev/commands/: __init__.py  bump.py  db.py  docker.py  run.py  setup.py  vendor.py
src/odoo_dev/templates/: __init__.py
src/odoo_dev/templates/docker/: Dockerfile  __init__.py  docker-entrypoint.sh
src/odoo_dev/templates/vscode/: __init__.py  launch.json  settings.json  tasks.json
src/odoo_dev/utils/: __init__.py  console.py  manifest.py
tests/: test_bump.py  test_cli.py  test_config.py  test_db.py  test_db_config.py  test_drop_database.py  test_integration.py  test_preflight.py  test_run.py  test_setup.py  test_setup_db.py  test_vendor_develop.py  test_vendor_edit.py  test_vendor_lock.py  test_vendor_materialize.py  test_vendor_migrate.py  test_vendor_update.py  test_vendor_verify.py
